fixed z-indexing and width

--- a/css/layout.css
+++ b/css/layout.css
@@ -5,22 +5,4 @@
 
     height: 100vh;
     width: 100vw;
-
-
-    .baklava-node {
-        max-width: none;
-        resize: both;
-        position: relative;
-
-        .__title {
-            overflow-x: visible;
-            white-space: nowrap;
-        }
-
-        .__content {
-            height: calc(100% - 32px);
-            overflow-y: clip;
-            overflow-x: hidden;
-        }
-    }
 }
